...
        }
        if (freeTrialDuration != null) {
            add("You will be charged automatically unless you cancel before the trial ends.")
        }
        add(
            if (autoRenewing) {
                "Renews automatically until canceled. Manage or cancel in Google Play."
            } else {
                "Does not renew automatically."
            }
        )
    }
        .joinToString(" ")
...
